# win32_app_in_rust_sample

./: Cargo.toml
bindings/: Cargo.toml  build.rs
src/: main.rs
