[package]
name = "win_app"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_System_LibraryLoader", 
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_System",
    "Win32_System_Diagnostics_Debug" ] }
